# refactor-typescript-ai

./: .gitignore  README.md  main.py  pyproject.toml  setup.py
config/: config.schema.json  config.yaml
docs/: api.md  architecture.md  development.md
scripts/: migrate.py  setup.sh
src/application/: __init__.py
src/application/dto/: __init__.py  analysis_result.py
src/application/services/: __init__.py  analysis_service.py  execution_service.py  execution_service.py.backup  execution_service.py.backup4  execution_service.py.backup5  planning_service.py
src/application/use_cases/: __init__.py  analyze_test_files.py  execute_refactoring.py  generate_refactor_plan.py
src/domain/: __init__.py
src/domain/entities/: __init__.py  pattern.py  refactor_plan.py  test_file.py
src/domain/repositories/: __init__.py  pattern_repository.py  test_file_repository.py
src/domain/value_objects/: __init__.py  complexity.py  file_metadata.py  quality_score.py
src/infrastructure/: __init__.py
src/infrastructure/analyzers/: __init__.py  base_analyzer.py  complexity_analyzer.py  quality_analyzer.py  smell_detector.py
src/infrastructure/generators/: __init__.py  code_generator.py  file_structure_generator.py  import_optimizer.py
src/infrastructure/parsers/: __init__.py  base_parser.py  import_parser.py  mock_parser.py  test_structure_parser.py  typescript_parser.py
src/infrastructure/persistence/: __init__.py  cache_storage.py  file_storage.py  json_serializer.py  pattern_storage.py
src/infrastructure/scanners/: __init__.py  file_scanner.py  parallel_scanner.py
src/interfaces/: __init__.py
src/interfaces/cli/: __init__.py  __main__.py  main.py
src/interfaces/cli/commands/: __init__.py  analyze_command.py  execute_command.py.backup  learn_command.py  practice_command.py
src/interfaces/cli/presenters/: __init__.py  console_presenter.py  report_generator.py
src/interfaces/config/: __init__.py  config_loader.py  config_validator.py
src/shared/: __init__.py
src/shared/exceptions/: __init__.py  base_exceptions.py  parsing_exceptions.py  validation_exceptions.py
src/shared/utils/: __init__.py  file_utils.py  math_utils.py  string_utils.py
src/shared/validators/: __init__.py  file_validator.py  plan_validator.py
tests/: __init__.py  conftest.py
tests/integration/: test_analysis_workflow.py
tests/unit/application/services/: test_analysis_service.py  test_execution_service.py  test_planning_service.py
tests/unit/domains/: test_complexity.py  test_quality_score.py  test_test_file.py
tests/unit/infrastructure/: test_file_scanner.py  test_import_parser.py  test_mock_parser.py  test_typescript_parser.py
tests/unit/shared/: test_file_utils.py  test_math_utils.py  test_string_utils.py
